Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-21056

Assertion `global_status_var.global_memory_used == 0' failed upon shutdown after query with DEFAULT on a geometry field

Details

    Description

      CREATE TABLE t1 (f POINT DEFAULT ST_GEOMFROMTEXT('Point(0 0)'));
      SELECT ST_GEOMFROMTEXT('Point(1 1)') IN ( DEFAULT( `f` ), ST_GEOMFROMTEXT('Point(2 2)') ) AS x FROM t1;
       
      DROP TABLE t1;
      

      10.2 3b573c07

      mysqld: /data/src/10.2/sql/mysqld.cc:2181: void mysqld_exit(int): Assertion `global_status_var.global_memory_used == 0' failed.
      191114 21:29:54 [ERROR] mysqld got signal 6 ;
       
      #12 0x00007ff2b1d94f12 in __GI___assert_fail (assertion=0x555bb7627d40 "global_status_var.global_memory_used == 0", file=0x555bb7627a8a "/data/src/10.2/sql/mysqld.cc", line=2181, function=0x555bb762fb20 <mysqld_exit(int)::__PRETTY_FUNCTION__> "void mysqld_exit(int)") at assert.c:101
      #13 0x0000555bb6ad1265 in mysqld_exit (exit_code=0) at /data/src/10.2/sql/mysqld.cc:2181
      #14 0x0000555bb6ad90fa in mysqld_main (argc=128, argv=0x555bba4f30a0) at /data/src/10.2/sql/mysqld.cc:6166
      #15 0x0000555bb6acd820 in main (argc=6, argv=0x7ffc24d52058) at /data/src/10.2/sql/main.cc:25
      

      Reproducible on 10.2-10.5. The test case is not applicable to 10.1.
      No obvious effect on a non-debug build.

      10.2 additionally produces another error at the end:

      safe_mutex: Trying to lock unitialized mutex at /data/src/10.2/mysys/my_open.c, line 140
      

      Attachments

        Activity

          People

            monty Michael Widenius
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.